Expose a list of available Bifrost analyses.
