# rest_app/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  api.yaml
-#   timestamp: 2021-04-08T09:41:50+00:00
+#   timestamp: 2021-04-08T13:43:15+00:00
 
 from __future__ import annotations
 
@@ -9,6 +9,7 @@ from typing import Optional
 from fastapi import FastAPI
 
 from .models import (
+    BifrostAnalyses,
     InitBifrostReprocessRequest,
     InitCgmlstRequest,
     InitNearestNeighborRequest,
@@ -55,6 +56,14 @@ def init_nearest_neighbors(body: InitNearestNeighborRequest = None) -> JobRespon
 def init_snp(body: InitSnpRequest = None) -> JobResponse:
     """
     Initiate an SNP comparative analysis job
+    """
+    pass
+
+
+@app.get('/list/bifrost_analyses', response_model=BifrostAnalyses)
+def get_bifrost_analysis_list() -> BifrostAnalyses:
+    """
+    Get the current list of Bifrost analyses
     """
     pass
 
