# rest_app/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  api.yaml
-#   timestamp: 2021-04-08T09:41:50+00:00
+#   timestamp: 2021-04-08T13:43:15+00:00
 
 from __future__ import annotations
 
@@ -82,4 +82,13 @@ class InitCgmlstRequest(BaseModel):
 
 class InitBifrostReprocessRequest(BaseModel):
     sequence_id: Optional[SequenceId] = None
-    component_name: Optional[str] = None
+    analysis_display_name: Optional[str] = None
+
+
+class BifrostAnalysis(BaseModel):
+    display_name: Optional[str] = None
+    version: Optional[str] = None
+
+
+class BifrostAnalyses(BaseModel):
+    analyses: Optional[List[BifrostAnalysis]] = None
